<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7Ws-Ph-wxx">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Root View Controller-->
        <scene sceneID="QxV-V1-r0o">
            <objects>
                <viewController id="7Ws-Ph-wxx" customClass="RootViewController" customModule="Testing_in_Xcode" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="4Ov-Ch-iwb">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="BNv-ab-cDX" userLabel="EandP">
                                <rect key="frame" x="20.5" y="220" width="373" height="91"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pLV-cL-JVk">
                                        <rect key="frame" x="0.0" y="0.0" width="373" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="67f-tG-FyQ">
                                        <rect key="frame" x="0.0" y="57" width="373" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="HjL-gm-PXd" userLabel="Bottom">
                                <rect key="frame" x="137" y="334" width="257" height="141"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Year of birth" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HwC-yY-vQ4">
                                        <rect key="frame" x="149" y="0.0" width="108" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="ogD-ya-JGR">
                                        <rect key="frame" x="0.0" y="57" width="257" height="31"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Terms and Conditions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g6b-UY-c0z">
                                                <rect key="frame" x="0.0" y="0.0" width="167" height="31"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Smq-fP-VEA">
                                                <rect key="frame" x="208" y="0.0" width="51" height="31"/>
                                                <accessibility key="accessibilityConfiguration" label="switchLabel"/>
                                                <connections>
                                                    <action selector="switchPressed:" destination="7Ws-Ph-wxx" eventType="valueChanged" id="dsd-HF-BnT"/>
                                                </connections>
                                            </switch>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZGm-3J-oAJ">
                                        <rect key="frame" x="200" y="111" width="57" height="30"/>
                                        <state key="normal" title="Register"/>
                                        <connections>
                                            <action selector="registerPressed:" destination="7Ws-Ph-wxx" eventType="touchUpInside" id="UHm-bU-ejj"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MzQ-zS-uqp">
                                <rect key="frame" x="207" y="525" width="0.0" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="errorLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="BNv-ab-cDX" firstAttribute="centerX" secondItem="4Ov-Ch-iwb" secondAttribute="centerX" id="Pnq-Wi-5UB"/>
                            <constraint firstItem="B9f-fd-nbU" firstAttribute="trailing" secondItem="HjL-gm-PXd" secondAttribute="trailing" constant="20" id="QXz-Qm-ALc"/>
                            <constraint firstItem="BNv-ab-cDX" firstAttribute="width" secondItem="4Ov-Ch-iwb" secondAttribute="width" multiplier="0.9" id="fk0-Py-nHh"/>
                            <constraint firstItem="MzQ-zS-uqp" firstAttribute="centerX" secondItem="4Ov-Ch-iwb" secondAttribute="centerX" id="jZ6-Ji-Ph1"/>
                            <constraint firstItem="MzQ-zS-uqp" firstAttribute="top" secondItem="HjL-gm-PXd" secondAttribute="bottom" constant="50" id="nwa-ii-fHJ"/>
                            <constraint firstItem="HjL-gm-PXd" firstAttribute="top" secondItem="BNv-ab-cDX" secondAttribute="bottom" constant="23" id="p0o-Sr-4K1"/>
                            <constraint firstItem="BNv-ab-cDX" firstAttribute="top" secondItem="B9f-fd-nbU" secondAttribute="top" multiplier="5" id="qRO-sy-3Wn"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="B9f-fd-nbU"/>
                    </view>
                    <connections>
                        <outlet property="emailTextField" destination="pLV-cL-JVk" id="t25-Iq-Hqu"/>
                        <outlet property="errorLabel" destination="MzQ-zS-uqp" id="Mvi-a7-64N"/>
                        <outlet property="passwordTextField" destination="67f-tG-FyQ" id="rUW-ik-6dv"/>
                        <outlet property="registerButton" destination="ZGm-3J-oAJ" id="bnP-fO-yNu"/>
                        <outlet property="switchButton" destination="Smq-fP-VEA" id="heH-3J-JQt"/>
                        <outlet property="yearTextField" destination="HwC-yY-vQ4" id="TXm-42-WWx"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4tz-lK-kn3" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1462" y="-19"/>
        </scene>
    </scenes>
</document>
